ui/common/sensor-meter-input.module.css
.root {
  display: flex;
  flex-direction: column;
  place-items: left;
  --meter-width: 64px;
}

.control {
  display: flex;
  place-items: center;
  margin-bottom: 8px;
}

.meterContainer {
  position: relative;
  width: var(--meter-width);
  height: 256px;
  background-color: light-dark(var(--mantine-color-gray-2), var(--mantine-color-dark-8));
  border-radius: 5px;
  overflow: hidden;
}

.meterValueFill {
  position: absolute;
  inset-inline: 0;
  bottom: 0;
  /* transition: all;
  transition-duration: 300ms;
  transition-timing-function: ease-in-out; */
  background-color: light-dark(var(--mantine-color-gray-5), var(--mantine-color-dark-3));
}

.meterValueFillActive {
  background-color: var(--mantine-color-green-5);
}

.meterThresholdLine {
  position: absolute;
  inset-inline: 0;
  height: 2px;
}

.atkColorFg {
  color: var(--mantine-color-blue-5);
}

.atkColorBg {
  background-color: var(--mantine-color-blue-5);
}

.rlsColorFg {
  color: var(--mantine-color-red-5);
}

.rlsColorBg {
  background-color: var(--mantine-color-red-5);
}

.controlsContainer {
  position: relative;
  margin-left: 8px;
  width: 16px;
  height: 256px;
}

.dragHandleContainer {
  position: absolute;
  display: flex;
  place-items: center;
}

.dragHandle {
  width: 16px;
  height: 16px;
  border-radius: 100%;
  cursor: ns-resize;
  touch-action: none;
}

.handleLabel {
  margin-left: 8px;
  font-size: 70%;
}

.bottomLabel {
  display: flex;
  flex-direction: column;
  width: var(--meter-width);
  font-size: 80%;
}

.bottomLabel p {
  margin: 0.4em 0;
}

.fsrIndicator {
  align-self: center;
  height: 2em;
  width: 2em;
  border: 1px solid light-dark(var(--mantine-color-gray-7), var(--mantine-color-gray-5));
}

.bad {
  color: var(--mantine-color-red-6);
  font-weight: 600;
  text-wrap: nowrap;
}

